# shoc-1

./: Makefile.in  configure  configure.ac  configure.ac~
config/: common.mk.in  config.h.in~
doc/: Makefile.in
src/: Makefile.am  Makefile.in
src/common/: Makefile.in
src/cuda/: Makefile.in
src/cuda/level0/: Makefile.in
src/cuda/level0/epmpi/: BusSpeedDownload  BusSpeedReadback  DeviceMemory  Makefile.in
src/cuda/level1/: Makefile.in
src/cuda/level1/bfs/: Makefile.in
src/cuda/level1/fft/: Makefile.in
src/cuda/level1/gemm/: Makefile.in
src/cuda/level1/md/: Makefile.in
src/cuda/level1/md5hash/: Makefile.in
src/cuda/level1/neuralnet/: Makefile.in
src/cuda/level1/reduction/: Makefile.in
src/cuda/level1/scan/: Makefile.in
src/cuda/level1/sort/: Makefile.in
src/cuda/level1/spmv/: Makefile.in
src/cuda/level1/stencil2d/: Makefile.in
src/cuda/level1/triad/: Makefile.in
src/cuda/level2/: Makefile.in
src/cuda/level2/qtclustering/: Makefile.in
src/cuda/level2/s3d/: Makefile.in
src/hip/: Makefile.am  Makefile.in
src/hip/common/: CUDAPMSMemMgr.h  cudacommon.h  main.cpp
src/hip/level0/: BusSpeedDownload.cpp  BusSpeedDownload.cu  BusSpeedReadback.cpp  BusSpeedReadback.cu.1  Makefile.am  Makefile.in  MaxFlops.cu
src/hip/level0/epmpi/: BusSpeedDownload  BusSpeedReadback  DeviceMemory  Makefile.am  Makefile.in  MaxFlops
src/hip/level1/: Makefile.am  Makefile.in
src/hip/level1/bfs/: Makefile.in
src/hip/level1/bfs/epmpi/: BFS  Makefile.am  Makefile.in
src/hip/level1/fft/: Makefile.in
src/hip/level1/gemm/: Makefile.in
src/hip/level1/md/: Makefile.in
src/hip/level1/md5hash/: Makefile.in
src/hip/level1/neuralnet/: Makefile.in
src/hip/level1/reduction/: Makefile.in
src/hip/level1/scan/: Makefile.in
src/hip/level1/sort/: Makefile.in
src/hip/level1/spmv/: Makefile.in  Spmv.cu.1
src/hip/level1/stencil2d/: Makefile.in
src/hip/level1/triad/: Makefile.in
src/hip/level2/: Makefile.am  Makefile.in
src/hip/level2/qtclustering/: Makefile.in
src/mpi/: Makefile.in
src/mpi/common/: Makefile.in
src/mpi/contention/: Makefile.in
src/mpi/contention-mt/: Makefile.in
src/opencl/: Makefile.in
src/opencl/common/: Makefile.in
src/opencl/level0/: Makefile.in
src/opencl/level1/: Makefile.in
src/opencl/level2/: Makefile.in
src/stability/: Makefile.in
src/stability/epmpi/: Makefile.in
tools/: Makefile.in
(+69 files in other folders)
